Refactor @SpringBootTest : -ApplicationKeystoreITest -MyLogbackITest -OsFolderFactoryManagerITest